--- a/namespace-kustomize-example2/configurations/global-secret-example-apps/namespace.yaml
+++ b/namespace-kustomize-example2/configurations/global-secret-example-apps/namespace.yaml
@@ -1,4 +1,5 @@
-apiVersion: v1
 kind: Namespace
+apiVersion: v1
 metadata:
-  name: channel-global-secret-example
+  name: ggithubcom-mooyeg-acm-onboarding-examples-ns
+spec: {}
