--- a/namespace-kustomize-example2/configurations/global-secret-example-resources/policy-global-secret.yaml
+++ b/namespace-kustomize-example2/configurations/global-secret-example-resources/policy-global-secret.yaml
@@ -23,8 +23,8 @@ spec:
                 apiVersion: v1
                 kind: Secret
                 data:
-                  username: "test"
-                  password: "test"
+                  username: '{{hub fromSecret "global-policies" "global-secret-for-every-namespace" "username" hub}}'
+                  password: '{{hub fromSecret "global-policies" "global-secret-for-every-namespace" "password" hub}}'
                 metadata:
                   name: global-secret-for-every-namespace
                   namespace: '{{ .metadata.name }}'
