--- a/namespace-kustomize-example2/configurations/global-secret-example-apps/channel.yaml
+++ b/namespace-kustomize-example2/configurations/global-secret-example-apps/channel.yaml
@@ -1,10 +1,10 @@
 apiVersion: apps.open-cluster-management.io/v1
 kind: Channel
 metadata:
-  labels:
-    app: global-secret-example
-  name: channel-global-secret-example
-  namespace: channel-global-secret-example
+  annotations:
+    apps.open-cluster-management.io/reconcile-rate: 'off'
+  name: ggithubcom-mooyeg-acm-onboarding-examples
+  namespace: ggithubcom-mooyeg-acm-onboarding-examples-ns
 spec:
-  pathname: https://github.com/MoOyeg/acm-onboarding-examples.git
+  pathname: 'https://github.com/MoOyeg/acm-onboarding-examples.git'
   type: Git
