--- a/namespace-kustomize-example2/team-overlays-build/team-a/kustomization.yaml
+++ b/namespace-kustomize-example2/team-overlays-build/team-a/kustomization.yaml
@@ -7,12 +7,12 @@ commonAnnotations:
 commonLabels:
   deployer: "kustomize-global"
   
-patches:
-  - target:
-      kind: Secret
-      name: global-secret
-    patch: |-
-      - op: add
-        path: /metadata/annotations
-        value:
-          teama-applied_config: "true"
+# patches:
+#   - target:
+#       kind: Secret
+#       name: global-secret
+#     patch: |-
+#       - op: add
+#         path: /metadata/annotations
+#         value:
+#           teama-applied_config: "true"
