--- a/namespace-kustomize-example3/team-overlays-build/team-a/kustomization.yaml
+++ b/namespace-kustomize-example3/team-overlays-build/team-a/kustomization.yaml
@@ -1,9 +1,9 @@
 resources:
-  - ./team-b-clusterresources
-  - ./team-b-namespaces
+  - ./team-a-clusterresources
+  - ./team-a-namespaces
 
 commonAnnotations:
-  project-owner: team-b
+  project-owner: team-a
 commonLabels:
   deployer: "kustomize-global"
   
@@ -16,3 +16,5 @@ commonLabels:
 #         path: /metadata/annotations
 #         value:
 #           teama-applied_config: "true"
+
+
