--- a/namespace-kustomize-example3/team-specific-policies/team-a-policies/team-a-devspaces/placement-team-a-devspaces.yaml
+++ b/namespace-kustomize-example3/team-specific-policies/team-a-policies/team-a-devspaces/placement-team-a-devspaces.yaml
@@ -6,4 +6,9 @@ metadata:
 spec:
   predicates:
     - requiredClusterSelector:
-        labelSelector: {}
+        labelSelector:
+          matchExpressions:
+            - key: team-a-cluster
+              operator: In
+              values:
+                - "true"
